// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataIterator.js should match a snapshot - footer slot 1`] = `

<div class="data-iterator">
  <div>
  </div>
  <div>
    <span>
      footer
    </span>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="16"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                >
                  <div class="list">
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="icon material-icons input-group__append-icon input-group__icon-cb"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__range-controls">
        <div class="data-iterator__actions__pagination">
          1-3 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - hideActions and no footer slot 1`] = `

<div class="data-iterator">
  <div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - no data 1`] = `

<div class="data-iterator">
  <div>
    <div class="text-xs-center"
         style="width: 100%;"
    >
      No data available
    </div>
  </div>
  <div>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="28"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                >
                  <div class="list">
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="icon material-icons input-group__append-icon input-group__icon-cb"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__range-controls">
        <div class="data-iterator__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - no matching records 1`] = `

<div class="data-iterator">
  <div>
    <div class="text-xs-center"
         style="width: 100%;"
    >
      No matching records found
    </div>
  </div>
  <div>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="2"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                >
                  <div class="list">
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="icon material-icons input-group__append-icon input-group__icon-cb"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__range-controls">
        <div class="data-iterator__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - with data 1`] = `

<div class="data-iterator">
  <span>
    <div>
      b
    </div>
    <div>
      c
    </div>
    <div>
      a
    </div>
  </span>
  <div>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="42"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                >
                  <div class="list">
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="icon material-icons input-group__append-icon input-group__icon-cb"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__range-controls">
        <div class="data-iterator__actions__pagination">
          1-3 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;
